--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "defaultProject": "angular-frontend",
   "newProjectRoot": "projects",
   "projects": {
     "angular-frontend": {
