--- a/symfony-backend/config/packages/framework.yaml
+++ b/symfony-backend/config/packages/framework.yaml
@@ -8,6 +8,18 @@ framework:
     #esi: true
     #fragments: true
 
+    response:
+        headers:
+            content_security_policy:
+                default-src: "'self'"
+                script-src: "'self'"
+                style-src: "'self' 'unsafe-inline'"
+                img-src: "'self' data:"
+                font-src: "'self' data:"
+                connect-src: "'self' api.example.com"
+                object-src: "'none'"
+                frame-ancestors: "'none'"
+
 when@test:
     framework:
         test: true
