--- a/symfony-backend/.env_default
+++ b/symfony-backend/.env_default
@@ -32,5 +32,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/sothyscoedi?serverVersion=mariadb-11.
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=eVmlGivKGZxBY7WmmqH8yp
+JWT_PASSPHRASE=<JWT_PASSPHRASE>
 ###< lexik/jwt-authentication-bundle ###
