--- a/symfony-backend/composer.json
+++ b/symfony-backend/composer.json
@@ -11,7 +11,12 @@
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.4",
+        "lexik/jwt-authentication-bundle": "*",
         "nelmio/security-bundle": "^3.5",
+        "scheb/2fa-bundle": "*",
+        "scheb/2fa-email": "*",
+        "scheb/2fa-google-authenticator": "*",
+        "scheb/2fa-totp": "*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
