--- a/symfony-backend/.env
+++ b/symfony-backend/.env
@@ -33,6 +33,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/sothyscoedi?serverVersion=mariadb-11.
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=eVmlGivKGZxBY7WmmqH8yp
+JWT_TOKEN_TTL=3600
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
