--- a/symfony-backend/composer.json
+++ b/symfony-backend/composer.json
@@ -79,6 +79,9 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.63"
+        "doctrine/doctrine-fixtures-bundle": "^4.1",
+        "fakerphp/faker": "^1.24",
+        "symfony/maker-bundle": "^1.63",
+        "zenstruck/foundry": "^2.6"
     }
 }
