--- a/symfony-backend/composer.json
+++ b/symfony-backend/composer.json
@@ -44,7 +44,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "src/Tests/"
         }
     },
     "replace": {
@@ -83,6 +83,6 @@
         "fakerphp/faker": "^1.24",
         "phpunit/phpunit": "^12.3",
         "symfony/maker-bundle": "^1.63",
-        "zenstruck/foundry": "^2.6"
+        "zenstruck/foundry": "^2.6.2"
     }
 }
