--- a/symfony-backend/config/packages/security.yaml
+++ b/symfony-backend/config/packages/security.yaml
@@ -67,9 +67,11 @@ security:
         
         # Routes d'authentification publiques
         - { path: ^/api/auth/login, role: PUBLIC_ACCESS }
-        - { path: ^/api/auth/register, role: PUBLIC_ACCESS }
+        - { path: ^/api/auth/set-password, role: PUBLIC_ACCESS }
         - { path: ^/api/auth/forgot-password, role: PUBLIC_ACCESS }
-        - { path: ^/api/auth/reset-password, role: PUBLIC_ACCESS }
+        
+        # Routes d'administration (admin uniquement)
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
         
         # Documentation API publique (si Swagger/OpenAPI)
         - { path: ^/api/doc, role: PUBLIC_ACCESS }
