--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+  "start": "ng serve --proxy-config proxy.conf.json",
+  "build:css": "tailwindcss -i src/input.css -o src/output.css --minify",
+  "build": "npm run build:css && ng build",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test"
   },
   "private": true,
   "dependencies": {
