update problems to test somewhere else

--- a/symfony-backend/public/manifest.json
+++ b/symfony-backend/public/manifest.json
@@ -1,3 +1,5 @@
 {
-  "output.css": "output-6af4927c.css"
+  "main-YITCVBZI.js": "main-YITCVBZI-7c4be785.js",
+  "polyfills-WWHGMNZG.js": "polyfills-WWHGMNZG-0412f100.js",
+  "styles-GHHANZDE.css": "styles-GHHANZDE-57e4ae49.css"
 }
